--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,9 @@ erl_crash.dump
 # variables.
 /config/prod.secret.exs
 
+/web/static/elm/elm-stuff
+/web/static/elm/elm.js
+/web/static/vendor/elm
 
 # dont commit this thinger.
 /run-development.sh
